<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech </string>
    <string name="load_radio_text">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_radio_text">Retrofit - Type-safe Http client for Android and Java by Square, inc</string>

    <string name="download_button_text">Download</string>
    <string name="loading_button_text">We are loading</string>
    <string name="content_main_image_view">content main image view</string>
    <string name="file_name_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="done">Done</string>

    <string name="select_to_download">Please select the file to download</string>

    <string name="channel_download">Download Channel</string>
    <string name="download_channel">download_channel</string>
    <string name="download_successful">Download Successful</string>
    <string name="download_fail">Download Failed</string>
    <string name="loading_button">Loading Button</string>
</resources>
