<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

  <ImageView
      android:id="@+id/content_main_thumbnail"
      android:layout_width="@dimen/zero_dimen"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimaryDark"
      android:contentDescription="@string/content_main_image_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/baseline_cloud_download" />

  <RadioGroup
      android:id="@+id/content_main_radio_group"
      android:layout_width="@dimen/zero_dimen"
      android:layout_height="@dimen/zero_dimen"
      android:layout_marginStart="@dimen/margin_dimen"
      android:layout_marginTop="@dimen/margin_dimen"
      android:layout_marginEnd="@dimen/margin_dimen"
      android:layout_marginBottom="@dimen/margin_dimen"
      android:gravity="center_vertical"
      app:layout_constraintBottom_toTopOf="@+id/custom_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/content_main_thumbnail">

    <RadioButton
        android:id="@+id/glide_radio_button"
        style="@style/radio_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_dimen"
        android:text="@string/glide_radio_text" />

    <RadioButton
        android:id="@+id/load_app_radio_button"
        style="@style/radio_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_dimen"
        android:text="@string/load_radio_text"
        android:textSize="@dimen/default_text_size" />

    <RadioButton
        android:id="@+id/retrofit_radio_button"
        style="@style/radio_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_dimen"
        android:text="@string/retrofit_radio_text" />
  </RadioGroup>

  <com.udacity.LoadingButton
      android:id="@+id/custom_button"
      android:layout_width="@dimen/zero_dimen"
      android:layout_height="@dimen/loading_button_height"
      android:layout_margin="@dimen/loading_button_margin"
      android:contentDescription="@string/loading_button"
      app:buttonColorOne="@color/colorPrimary"
      app:buttonColorTwo="@color/colorPrimaryDark"
      app:circleLoad="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

