<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_layout_detail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

  <TextView
      android:id="@+id/filename_label"
      style="@style/radio_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_dimen"
      android:layout_marginTop="@dimen/margin_36"
      android:text="@string/file_name_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/filename_value"
      style="@style/radio_text_style"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_dimen"
      android:layout_marginTop="@dimen/margin_36"
      app:layout_constraintStart_toEndOf="@id/filename_label"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/status_label"
      style="@style/radio_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_dimen"
      android:layout_marginTop="@dimen/margin_36"
      android:text="@string/status_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/filename_value" />

  <TextView
      android:id="@+id/status_value"
      style="@style/radio_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="@+id/filename_value"
      app:layout_constraintTop_toTopOf="@+id/status_label" />

  <Button
      android:id="@+id/done_button"
      android:layout_width="@dimen/zero_dimen"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_dimen"
      android:layout_marginEnd="@dimen/margin_dimen"
      android:layout_marginBottom="@dimen/margin_dimen"
      android:backgroundTint="@color/colorPrimary"
      android:text="@string/done"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>